2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: Allow parameters to be
	pointers to structs, which themselves can contain
	(nearly) any other type, including other structs or pointers to
	structs.


2006-08-07  Steve Fink <sphink@gmail.com>

	* defs.h, display_args.c, etc/ltrace.conf, ltrace.1, ltrace.h,
	options.c, options.h, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: array arguments

2006-08-07  Steve Fink <sphink@gmail.com>

	* etc/ltrace.conf, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: add ability to typedef

2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: short, ushort and float types

2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: implement enumerated parameters

2006-08-07  Steve Fink <sphink@gmail.com>

	* testsuite/ltrace.main/Makefile.in :  update testsuite for
	new parameters
	* testsuite/ltrace.main/parameters-lib.c : added
	* testsuite/ltrace.main/parameters.c : added
	* testsuite/ltrace.main/parameters.conf : added
	* testsuite/ltrace.main/parameters.exp : added

2006-08-07  Steve Fink  <sphink@gmail.com>
